--- a/SMSTimetable/SMSTimetable/UserChangerWindow.xaml
+++ b/SMSTimetable/SMSTimetable/UserChangerWindow.xaml
@@ -5,12 +5,12 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:SMSTimetable"
         mc:Ignorable="d"
-        Title="Изменение" Height="264.756" Width="418.229" WindowStartupLocation="CenterScreen">
+        Title="Изменение" Height="229.756" Width="278.229" WindowStartupLocation="CenterScreen">
     <Grid>
-        <Button x:Name="ChangeEmailButton" Content="Email" HorizontalAlignment="Left" Margin="100,34,0,0" VerticalAlignment="Top" Width="216" Height="42"/>
-        <Button x:Name="ChangePhoneButton" Content="Телефон" HorizontalAlignment="Left" Margin="100,128,0,0" VerticalAlignment="Top" Width="215" Height="42"/>
-        <Button x:Name="ChangePasswordButton" Content="Пароль" HorizontalAlignment="Left" Margin="100,81,0,0" VerticalAlignment="Top" Width="215" Height="42"/>
-        <GroupBox Header="Изменение данных пользователя [email]" HorizontalAlignment="Left" Height="185" Margin="10,10,0,0" VerticalAlignment="Top" Width="390"/>
+        <Button x:Name="ChangeEmailButton" Content="Email" HorizontalAlignment="Left" Margin="30,34,0,0" VerticalAlignment="Top" Width="216" Height="42" Click="ChangeEmailButton_Click"/>
+        <Button x:Name="ChangePhoneButton" Content="Телефон" HorizontalAlignment="Left" Margin="30,128,0,0" VerticalAlignment="Top" Width="215" Height="42"/>
+        <Button x:Name="ChangePasswordButton" Content="Пароль" HorizontalAlignment="Left" Margin="30,81,0,0" VerticalAlignment="Top" Width="215" Height="42"/>
+        <GroupBox Header="Изменение данных текущего пользователя" HorizontalAlignment="Left" Height="185" Margin="10,10,0,0" VerticalAlignment="Top" Width="258"/>
 
     </Grid>
 </Window>
