--- a/SMSTimetable/SMSTimetable/SenderWindow.xaml
+++ b/SMSTimetable/SMSTimetable/SenderWindow.xaml
@@ -25,6 +25,7 @@
         <Label x:Name="GroupLabel" Content="Группа:" HorizontalAlignment="Left" Margin="319,185,0,0" VerticalAlignment="Top"/>
         <CheckBox x:Name="SaveDatabaseCheckBox" Content="Сохранить в БД" HorizontalAlignment="Left" Margin="361,225,0,0" VerticalAlignment="Top" IsChecked="True"/>
         <CheckBox x:Name="SendSMSCheckBox" Content="Отправить SMS" HorizontalAlignment="Left" Margin="361,245,0,0" VerticalAlignment="Top" IsChecked="True"/>
+        <Button x:Name="ExitButton" Content="Выход" HorizontalAlignment="Left" Margin="30,315,0,0" VerticalAlignment="Top" Width="75" Click="ExitButton_Click"/>
 
     </Grid>
 </Window>
