--- a/SMSTimetable/SMSTimetable/UserManagmentWindow.xaml
+++ b/SMSTimetable/SMSTimetable/UserManagmentWindow.xaml
@@ -8,7 +8,7 @@
     <Grid>
         <Button x:Name="ThisUserInfoButton" Content="Информация о текущем пользователе" HorizontalAlignment="Left" Margin="9,10,0,0" VerticalAlignment="Top" Width="216" Height="42"/>
         <Button x:Name="AddUserButton" Content="Добавление" HorizontalAlignment="Left" Margin="10,104,0,0" VerticalAlignment="Top" Width="215" Height="42" Click="AddUserButton_Click"/>
-        <Button x:Name="RemoveUserButton" Content="Удаление" HorizontalAlignment="Left" Margin="10,151,0,0" VerticalAlignment="Top" Width="215" Height="42"/>
+        <Button x:Name="RemoveUserButton" Content="Удаление" HorizontalAlignment="Left" Margin="10,151,0,0" VerticalAlignment="Top" Width="215" Height="42" Click="RemoveUserButton_Click"/>
         <Button x:Name="ChangeThisUserButton" Content="Изменение текущего пользователя" HorizontalAlignment="Left" Margin="10,57,0,0" VerticalAlignment="Top" Width="215" Height="42" Click="ChangeThisUserButton_Click"/>
 
     </Grid>
