--- a/SMSTimetable/SMSTimetable/UserChangePasswordWindow.xaml
+++ b/SMSTimetable/SMSTimetable/UserChangePasswordWindow.xaml
@@ -7,17 +7,17 @@
         mc:Ignorable="d"
         Title="Изменение пароля" Height="371.725" Width="360.5" WindowStartupLocation="CenterScreen">
     <Grid>
-        <TextBox x:Name="OldPasswordTextBox" HorizontalAlignment="Left" Height="23" Margin="18,38,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="303" TextChanged="OldPasswordTextBox_TextChanged"/>
         <Label x:Name="OldPasswordLabel" Content="Введите ваш старый пароль:" HorizontalAlignment="Left" Margin="14,12,0,0" VerticalAlignment="Top"/>
-        <TextBox x:Name="NewPasswordTextBox" HorizontalAlignment="Left" Height="23" Margin="18,127,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="303" TextChanged="NewPasswordTextBox_TextChanged"/>
         <Label x:Name="NewPasswordLabel" Content="Введите ваш новый пароль:" HorizontalAlignment="Left" Margin="10,96,0,0" VerticalAlignment="Top"/>
         <Label x:Name="NewPasswordComments" Content="-&gt;" HorizontalAlignment="Left" Margin="18,155,0,0" VerticalAlignment="Top"/>
         <Label x:Name="OldPasswordComments" Content="-&gt;" HorizontalAlignment="Left" Margin="18,65,0,0" VerticalAlignment="Top"/>
-        <Button x:Name="PasswordConfirmButton" Content="Смена пароля" HorizontalAlignment="Left" Margin="199,286,0,0" VerticalAlignment="Top" Width="122" Height="29" Click="EmailConfirmButton_Click"/>
-        <TextBox x:Name="NewRepeatPasswordTextBox" HorizontalAlignment="Left" Height="23" Margin="18,217,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="303" TextChanged="NewRepeatPasswordTextBox_TextChanged"/>
+        <Button x:Name="PasswordConfirmButton" Content="Смена пароля" HorizontalAlignment="Left" Margin="199,286,0,0" VerticalAlignment="Top" Width="122" Height="29" Click="EmailConfirmButton_Click" IsEnabled="False"/>
         <Label x:Name="NewRepeatPasswordLabel" Content="Повторите ваш новый пароль:" HorizontalAlignment="Left" Margin="10,186,0,0" VerticalAlignment="Top"/>
         <Label x:Name="NewRepeatPasswordComments" Content="-&gt;" HorizontalAlignment="Left" Margin="18,245,0,0" VerticalAlignment="Top"/>
         <Button x:Name="StopButton" Content="&lt;=" HorizontalAlignment="Left" Margin="14,286,0,0" VerticalAlignment="Top" Width="122" Height="29" Click="StopButton_Click"/>
+        <PasswordBox x:Name="OldPassword" HorizontalAlignment="Left" Margin="18,43,0,0" VerticalAlignment="Top" Height="22" Width="303" PasswordChanged="OldPassword_PasswordChanged"/>
+        <PasswordBox x:Name="NewPassword" HorizontalAlignment="Left" Margin="18,133,0,0" VerticalAlignment="Top" Height="22" Width="303" PasswordChanged="NewPassword_PasswordChanged"/>
+        <PasswordBox x:Name="NewRepeatPassword" HorizontalAlignment="Left" Margin="18,223,0,0" VerticalAlignment="Top" Height="22" Width="303" PasswordChanged="NewRepeatPassword_PasswordChanged"/>
 
     </Grid>
 </Window>
