--- a/SMSTimetable/SMSTimetable/UserRemoveWindow.xaml
+++ b/SMSTimetable/SMSTimetable/UserRemoveWindow.xaml
@@ -9,7 +9,7 @@
     <Grid>
         <TextBox x:Name="LoginTextBox" HorizontalAlignment="Left" Height="23" Margin="113,15,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="228" TextChanged="LoginTextBox_TextChanged"/>
         <Label x:Name="LoginLabel" Content="Логин:" HorizontalAlignment="Left" Margin="14,12,0,0" VerticalAlignment="Top"/>
-        <Button x:Name="NextButton" Content="Далее" HorizontalAlignment="Left" Margin="420,86,0,0" VerticalAlignment="Top" Width="107" Height="36" Click="NextButton_Click"/>
+        <Button x:Name="NextButton" Content="Далее" HorizontalAlignment="Left" Margin="420,86,0,0" VerticalAlignment="Top" Width="107" Height="36" Click="NextButton_Click" IsEnabled="False"/>
         <Button x:Name="ExitButton" Content="Отмена" HorizontalAlignment="Left" Margin="14,86,0,0" VerticalAlignment="Top" Width="107" Height="36" Click="ExitButton_Click"/>
         <Label x:Name="Logincomments" Content="-&gt;" HorizontalAlignment="Left" Margin="346,12,0,0" VerticalAlignment="Top"/>
         <Label x:Name="MasterPasswordLabel" Content="Мастер-пароль:" HorizontalAlignment="Left" Margin="14,43,0,0" VerticalAlignment="Top"/>
