Фиксанули таймеры, адаптивные цвета, дизайн

--- a/SMSTimetable/SMSTimetable/App.xaml
+++ b/SMSTimetable/SMSTimetable/App.xaml
@@ -4,6 +4,10 @@
              xmlns:local="clr-namespace:SMSTimetable"
              StartupUri="MainWindow.xaml">
     <Application.Resources>
-         
+        <ResourceDictionary>
+            <ResourceDictionary.MergedDictionaries>
+                <ResourceDictionary Source="pack://application:,,,/HandyControl;component/Themes/ThemesDefault.xaml"/>
+            </ResourceDictionary.MergedDictionaries>
+        </ResourceDictionary>
     </Application.Resources>
 </Application>
