--- a/SMSTimetable/SMSTimetable/MainWindow.xaml
+++ b/SMSTimetable/SMSTimetable/MainWindow.xaml
@@ -1,20 +1,21 @@
 ﻿<Window x:Class="SMSTimetable.MainWindow"
+       
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:SMSTimetable"
         mc:Ignorable="d"
-        Title="Вход в систему" Height="225.477" Width="308.259" WindowStartupLocation="CenterScreen" Initialized="Window_Initialized">
+        Title="Вход в систему" Height="254.214" Width="297.944" WindowStartupLocation="CenterScreen" Initialized="Window_Initialized">
     <Grid>
-        <Label x:Name="LoginLabel" Content="Логин:" HorizontalAlignment="Left" Margin="21,53,0,0" VerticalAlignment="Top" Height="25" Width="65"/>
-        <Button x:Name="EnterButton" Content="Вход" HorizontalAlignment="Left" Margin="105,152,0,0" VerticalAlignment="Top" Width="75" Click="EnterButton_Click"/>
-        <TextBox x:Name="LoginTextBox" HorizontalAlignment="Left" Height="23" Margin="91,53,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="120"/>
-        <GroupBox x:Name="LoginGroupBox" Header="Авторизация пользователя" HorizontalAlignment="Left" Height="175" Margin="21,9,0,0" VerticalAlignment="Top" Width="239">
+        <Label x:Name="LoginLabel" Content="Логин:" HorizontalAlignment="Left" Margin="32,53,0,0" VerticalAlignment="Top" Height="25" Width="54"/>
+        <Button x:Name="EnterButton" Content="Вход" HorizontalAlignment="Left" Margin="105,152,0,0" VerticalAlignment="Top" Width="75" Click="EnterButton_Click" Background="#FFDDDDDD"/>
+        <TextBox x:Name="LoginTextBox" HorizontalAlignment="Left" Height="30" Margin="91,53,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="120"/>
+        <GroupBox x:Name="LoginGroupBox" Header="Авторизация пользователя" HorizontalAlignment="Left" Height="184" Margin="21,9,0,0" VerticalAlignment="Top" Width="239" BorderBrush="#FF2B77BB">
             <CheckBox x:Name="SaveLoginCheckBox" Content="Запомнить" HorizontalAlignment="Left" Margin="66,96,0,0" VerticalAlignment="Top"/>
         </GroupBox>
-        <Label x:Name="PasswordLabel" Content="Пароль:" HorizontalAlignment="Left" Margin="21,88,0,0" VerticalAlignment="Top" Height="25" Width="65"/>
-        <PasswordBox x:Name="PasswordBox" HorizontalAlignment="Left" Height="23" Margin="91,88,0,0" VerticalAlignment="Top" Width="120"/>
+        <Label x:Name="PasswordLabel" Content="Пароль:" HorizontalAlignment="Left" Margin="32,88,0,0" VerticalAlignment="Top" Height="25" Width="54"/>
+        <PasswordBox x:Name="PasswordBox" HorizontalAlignment="Left" Height="30" Margin="91,88,0,0" VerticalAlignment="Top" Width="120"/>
 
     </Grid>
 </Window>
