--- a/SMSTimetable/SMSTimetable/SMSStatusWindow.xaml
+++ b/SMSTimetable/SMSTimetable/SMSStatusWindow.xaml
@@ -3,7 +3,7 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:SMSTimetable"
+        xmlns:controls="clr-namespace:HandyControl.Controls;assembly=HandyControl"
         mc:Ignorable="d"
         Title="Информация об SMS-сообщениях" Height="399" Width="684.5" Initialized="Window_Initialized" WindowStartupLocation="CenterScreen">
     <Grid>
