--- a/SMSTimetable/SMSTimetable/UserAddWindow.xaml
+++ b/SMSTimetable/SMSTimetable/UserAddWindow.xaml
@@ -4,22 +4,23 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:SMSTimetable"
-        mc:Ignorable="d" Title="Добавление" Height="255" Width="584" WindowStartupLocation="CenterScreen">
+        mc:Ignorable="d" Title="Добавление" Height="359" Width="561.5" WindowStartupLocation="CenterScreen" Initialized="Window_Initialized">
     <Grid>
-        <TextBox x:Name="EmalTextBox" HorizontalAlignment="Left" Height="23" Margin="113,15,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="228" TextChanged="EmalTextBox_TextChanged"/>
-        <Label x:Name="EmailLabel" Content="E-mail:" HorizontalAlignment="Left" Margin="14,12,0,0" VerticalAlignment="Top"/>
-        <TextBox x:Name="PhoneTextBox" HorizontalAlignment="Left" Height="23" Margin="113,46,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="228" TextChanged="PhoneTextBox_TextChanged"/>
-        <Label x:Name="PhoneLabel" Content="Телефон:" HorizontalAlignment="Left" Margin="14,43,0,0" VerticalAlignment="Top"/>
-        <Label x:Name="PasswordLabel" Content="Пароль:" HorizontalAlignment="Left" Margin="14,74,0,0" VerticalAlignment="Top"/>
-        <Button x:Name="NextButton" Content="Далее" HorizontalAlignment="Left" Margin="430,148,0,0" VerticalAlignment="Top" Width="107" Height="36" Click="NextButton_Click" IsEnabled="False"/>
-        <Button x:Name="ExitButton" Content="Отмена" HorizontalAlignment="Left" Margin="33,148,0,0" VerticalAlignment="Top" Width="107" Height="36" Click="ExitButton_Click"/>
-        <Label x:Name="Emailcomments" Content="-&gt;" HorizontalAlignment="Left" Margin="346,12,0,0" VerticalAlignment="Top"/>
-        <Label x:Name="Phonecomments" Content="-&gt;" HorizontalAlignment="Left" Margin="346,43,0,0" VerticalAlignment="Top"/>
-        <Label x:Name="Passwordcomments" Content="-&gt;" HorizontalAlignment="Left" Margin="346,74,0,0" VerticalAlignment="Top"/>
-        <PasswordBox x:Name="PasswordBox" HorizontalAlignment="Left" Margin="113,77,0,0" VerticalAlignment="Top" Width="228" Height="23" PasswordChanged="PasswordBox_PasswordChanged"/>
-        <Label x:Name="MasterPasswordLabel" Content="Мастер-пароль:" HorizontalAlignment="Left" Margin="14,105,0,0" VerticalAlignment="Top"/>
-        <Label x:Name="MasterPasswordcomments" Content="-&gt;" HorizontalAlignment="Left" Margin="346,105,0,0" VerticalAlignment="Top"/>
-        <PasswordBox x:Name="MasterPasswordBox" HorizontalAlignment="Left" Margin="113,108,0,0" VerticalAlignment="Top" Width="228" Height="23" PasswordChanged="MasterPasswordBox_PasswordChanged"/>
+        <TextBox x:Name="EmalTextBox" HorizontalAlignment="Left" Height="32" Margin="119,44,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="228" TextChanged="EmalTextBox_TextChanged"/>
+        <Label x:Name="EmailLabel" Content="E-mail:" HorizontalAlignment="Left" Margin="21,42,0,0" VerticalAlignment="Top"/>
+        <TextBox x:Name="PhoneTextBox" HorizontalAlignment="Left" Height="32" Margin="119,92,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="228" TextChanged="PhoneTextBox_TextChanged"/>
+        <Label x:Name="PhoneLabel" Content="Телефон:" HorizontalAlignment="Left" Margin="21,90,0,0" VerticalAlignment="Top"/>
+        <Label x:Name="PasswordLabel" Content="Пароль:" HorizontalAlignment="Left" Margin="21,134,0,0" VerticalAlignment="Top"/>
+        <Button x:Name="NextButton" Content="Далее" HorizontalAlignment="Left" Margin="399,265,0,0" VerticalAlignment="Top" Width="107" Height="36" Click="NextButton_Click" IsEnabled="False"/>
+        <Button x:Name="ExitButton" Content="Отмена" HorizontalAlignment="Left" Margin="20,265,0,0" VerticalAlignment="Top" Width="107" Height="36" Click="ExitButton_Click"/>
+        <Label x:Name="Emailcomments" Content="-&gt;" HorizontalAlignment="Left" Margin="357,50,0,0" VerticalAlignment="Top"/>
+        <Label x:Name="Phonecomments" Content="-&gt;" HorizontalAlignment="Left" Margin="357,98,0,0" VerticalAlignment="Top"/>
+        <Label x:Name="Passwordcomments" Content="-&gt;" HorizontalAlignment="Left" Margin="357,142,0,0" VerticalAlignment="Top"/>
+        <PasswordBox x:Name="PasswordBox" HorizontalAlignment="Left" Margin="119,138,0,0" VerticalAlignment="Top" Width="228" Height="32" PasswordChanged="PasswordBox_PasswordChanged"/>
+        <Label x:Name="MasterPasswordLabel" Content="Мастер-пароль:" HorizontalAlignment="Left" Margin="21,180,0,0" VerticalAlignment="Top"/>
+        <Label x:Name="MasterPasswordcomments" Content="-&gt;" HorizontalAlignment="Left" Margin="357,188,0,0" VerticalAlignment="Top"/>
+        <PasswordBox x:Name="MasterPasswordBox" HorizontalAlignment="Left" Margin="119,184,0,0" VerticalAlignment="Top" Width="228" Height="32" PasswordChanged="MasterPasswordBox_PasswordChanged"/>
+        <GroupBox x:Name="AddGroupBox" Header="Ввод" HorizontalAlignment="Left" Height="234" Margin="10,10,0,0" VerticalAlignment="Top" Width="519"/>
 
     </Grid>
 </Window>
